--- a/public/about/index.html
+++ b/public/about/index.html
@@ -99,7 +99,9 @@
 <p>you can find the courses <a href="https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg">here</a>.</p>
 <p>you can find my twitter page <a href="https://www.twitter.com/faanross">here</a>.</p>
 <p>you can contact me <a href="mailto:moi@faanross.com">here</a>.</p>
-<h1 id="live-long-and-prosper-">live long and prosper 🖖</h1>
+<figure><img src="/img/spock.gif"/>
+</figure>
+
 
 		</section>
 
