--- a/public/about/index.html
+++ b/public/about/index.html
@@ -95,10 +95,11 @@
 		
 
 		<section class="body">
-			<p><strong>this page contains extensive write-ups of my youtube courses about threat hunting.</strong></p>
+			<p><strong>this page contains extensive write-ups related to threat hunting and its derivations.</strong></p>
 <p>you can find the courses <a href="https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg">here</a>.</p>
 <p>you can find my twitter page <a href="https://www.twitter.com/faanross">here</a>.</p>
 <p>you can contact me <a href="mailto:moi@faanross.com">here</a>.</p>
+<p>thanks for stopping by.</p>
 <figure><img src="/img/spock.gif"/>
 </figure>
 
