friday first update

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -20,8 +20,8 @@
 	
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="https://athul.github.io/archie/css/main.b27be75ac2290d85a5ed23fa54dde4fdd30a0dbbaca8a8c286d3441e1cb88cb7.css" />
-		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="https://athul.github.io/archie/css/dark.20b7839742a502c8d893948ce5d5832328bad9bdba892c7067eee12b7953b0ee.css"   />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://athul.github.io/archie/css/main.bcb46c69205f3947f566f02796df9d120c2aec40679840b71582f5e47825d251.css" />
+		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="https://athul.github.io/archie/css/dark.2e020a56936a891d7a364d8d5a5cbd2360735f68d39a3779f188ad4bb91ccf1f.css"   />
 	
 
 	
@@ -95,11 +95,11 @@
 		
 
 		<section class="body">
-			<p><strong>this page contains extensive write-ups related to threat hunting and its derivations.</strong></p>
+			<p><strong>this page contains content related to threat hunting and memory forensics.</strong></p>
+<p><strong>most of it is based on my free youtube courses, but some of it is not.</strong></p>
 <p>you can find the courses <a href="https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg">here</a>.</p>
 <p>you can find my twitter page <a href="https://www.twitter.com/faanross">here</a>.</p>
 <p>you can contact me <a href="mailto:moi@faanross.com">here</a>.</p>
-<p>thanks for stopping by.</p>
 <figure><img src="/img/spock.gif"/>
 </figure>
 
