--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="https://athul.github.io/archie/css/main.bcb46c69205f3947f566f02796df9d120c2aec40679840b71582f5e47825d251.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://athul.github.io/archie/css/main.d8abe2efcb06e2323d14b11021ac606c0e7d3836eca58405722bc1cc56262ff8.css" />
 		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="https://athul.github.io/archie/css/dark.2e020a56936a891d7a364d8d5a5cbd2360735f68d39a3779f188ad4bb91ccf1f.css"   />
 	
 
@@ -95,11 +95,11 @@
 				
 				
 				<section class="list-item">
-					<h1 class="title"><a href="/archie/posts/post-1/">Threat Hunting Dll-injected C2 beacons (Practical Course)</a></h1>
+					<h1 class="title"><a href="/archie/posts/post-1/">Threat Hunting Standard Dll-Injected C2 Implants (Practical Course)</a></h1>
 					<time>Jul 12, 2023</time>
 					<br><div class="description">
 	
-	In this course we&#39;ll learn how to threat hunt both classical and reflective DLL-injected C2 implants. We&#39;ll do so from 3 approaches: memory forensics, log analysis &#43; UEBA, and traffic analysis.
+	In this beginner-friendly practical course we&#39;ll learn how to threat hunt standard DLL-injected C2 implants. We&#39;ll set up our own virtual environment, perform the attack, perform our threat hunting analysis, as well as write a report on our findings.
 	
 </div>
 					<a class="readmore" href="/archie/posts/post-1/">Read more ⟶</a>
