--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 				
 				
 				<section class="list-item">
-					<h1 class="title"><a href="/archie/posts/post-2/">The 3 Modes of Threat Hunting (Beginner Theory)</a></h1>
+					<h1 class="title"><a href="/archie/posts/post-2/">The 3 Modes of Threat Hunting</a></h1>
 					<time>Jul 26, 2023</time>
 					<br><div class="description">
 	
