--- a/public/about/index.html
+++ b/public/about/index.html
@@ -95,9 +95,39 @@
 		
 
 		<section class="body">
-			<p><strong>this page contains content related to threat hunting and memory forensics.</strong></p>
-<p><strong>most of it is based on my free youtube courses, but some of it is not.</strong></p>
-<p>you can find the courses <a href="https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg">here</a>.</p>
+			<h1 id="about-me">ABOUT ME</h1>
+<p><strong>this site contains original content related to threat hunting + memory forensics.</strong></p>
+<p>but since you clicked on &lsquo;about&rsquo; i&rsquo;m gonna assume you also want to learn a bit about me.</p>
+<p>ok well, my name is faan and I love cybersecurity and threat hunting. really, i think its the coolest goddamn thing i&rsquo;ve ever had an opportunity to be a student of. praise be.</p>
+<p>here are a other few things that tickle my fancy&hellip;</p>
+<figure class="custom-figure"><img src="/img/attack_kip.gif"/>
+</figure>
+
+<p>i have been practicing <code>brazilian jiu jitsu</code> since 2015 and think its likely the most fun goddamn thing i&rsquo;ve ever had an opportunity to be a student of. i have mostly practice nogi, and received my purple belt under louis ho (10th planet montreal). i love hitting a sneaky gogoplata from guard or sliding into a d&rsquo;arce from side control, but really as vanilla as it may be nothing feels better than finishing a <em>mata leão</em>.</p>
+<figure class="custom-figure"><img src="/img/goodboy.gif"/>
+</figure>
+
+<p><code>dogs</code> might be the best thing in existence fr. i love dog training, not competitively, but simply as a way to develop a common language between oneself and a dog. but in general - pettings dogs, playing with dogs, and just being around them. i have two friends at the moment - <code>kuma</code> the groenendael and <code>voodoo the dutch shepherd</code>. i also have a legendary abysinnian called <code>buddlez</code> - i love cats too!</p>
+<figure class="custom-figure"><img src="/img/watermelon.gif"/>
+</figure>
+
+<p><code>good stories and storytelling</code> in all its forms - from myths to graphic novels to nic cage movies to anime to point and click adventure games. at the risk of sounding a touch overly woo-woo: i think stories are inextricably intertwined with the evolution of humans. they can serve not merely as some form of temporary distraction, but as a deeply informative sources of meaning for our deep + collective psychologies. some favourites include chainsaw man, napoleon dynamite, south park, the wire, and anything touched by nathan fielder.</p>
+<figure class="custom-figure"><img src="/img/guitar.gif"/>
+</figure>
+
+<p><code>learning new things</code> and enjoying the suck is both humbling and deeply invigorating. there is not only an inherent <em>joie de vivre</em> in learning new things, but i believe it is the best practice to keep one&rsquo;s mind potent and pliable, especially as you age. i think it excellent practice to not only master certain topics over time, but also consciously choosing to go into the <em>new student</em> stage, in whatever topic that might be. the meta here is also great - the more new things you learn, the better you can become at learning new things. i&rsquo;m currently learning both spanish and french + electric guitar. it&rsquo;s the third time round but this time i think i got it 😜</p>
+<figure class="custom-figure"><img src="/img/mckenna.gif"/>
+</figure>
+
+<p><code>here are some words + ideas i live by</code>:
+<a href="https://www.youtube.com/watch?v=wupToqz1e2g">the pale blue dot by carl sagan</a>
+<a href="https://www.youtube.com/watch?v=eC7xzavzEKY">this is water by david foster wallace</a>
+<a href="https://vimeo.com/45097801">what i have to offer by charlie kaufmann</a></p>
+<p><em><strong>“Nature loves courage. You make the commitment and nature will respond to that commitment by removing impossible obstacles. Dream the impossible dream and the world will not grind you under, it will lift you up. This is the trick. This is what all these teachers and philosophers who really counted, who really touched the alchemical gold, this is what they understood. This is the shamanic dance in the waterfall. This is how magic is done. By hurling yourself into the abyss and discovering it&rsquo;s a feather bed.”</strong></em>
+― Terence McKenna</p>
+<p>&hellip;</p>
+<p><code>finally, if you wanna connect</code>:</p>
+<p>you can find my video courses <a href="https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg">here</a>.</p>
 <p>you can find my twitter page <a href="https://www.twitter.com/faanross">here</a>.</p>
 <p>you can contact me <a href="mailto:moi@faanross.com">here</a>.</p>
 <figure><img src="/img/spock.gif"/>
