minor cosmetic upgrades

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -95,7 +95,7 @@
 		
 
 		<section class="body">
-			<p><strong>this site contains original content related to threat hunting + memory forensics.</strong></p>
+			<p><strong>this site contains original content related to threat hunting, active defense, and deception.</strong></p>
 <p>but since you clicked on <em><strong>about</strong></em> i&rsquo;m gonna assume you also want to learn a bit about me, faan ross.</p>
 <figure class="custom-figure"><img src="/img/watermelon.gif"/>
 </figure>
