--- a/public/course01/outline/index.html
+++ b/public/course01/outline/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html><head lang="en">
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Course 01 Outline - faan|ross</title><link rel="icon" type="image/x-icon" href=/favicon.ico /><meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Outline for course 01" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Outline: Threat Hunting for Beginners: Hunting Standard Dll-Injected C2 Implants - faan|ross</title><link rel="icon" type="image/x-icon" href=/favicon.ico /><meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="# Topic 1 Setting Up Your Virtual Environment 1.1 Introduction 1.2 Requirements 1.3 Hosted Hypervisor 1.4 VM Images 1.5 VM 1: Windows 10 aka &ldquo;The Victim&rdquo; 1.5.1 Installation 1.5.2 VMWare Tools 1.5.3 Deep disable MS Defender &#43; Updates 1.5.4 Sysmon 1.5.5 PowerShell ScriptBlock Logging 1.5.6 Install Software 1.5.7 Creating a Template 1.6 VM 2: Kali Linux aka &ldquo;The Attacker&rdquo; 1.7 VM 3: Ubuntu Linux 20.04 aka &ldquo;The Analyst&rdquo; 1.7.1 Installation 1." />
 	<meta property="og:image" content=""/>
-	<meta property="og:title" content="Course 01 Outline" />
-<meta property="og:description" content="Outline for course 01" />
+	<meta property="og:title" content="Outline: Threat Hunting for Beginners: Hunting Standard Dll-Injected C2 Implants" />
+<meta property="og:description" content="# Topic 1 Setting Up Your Virtual Environment 1.1 Introduction 1.2 Requirements 1.3 Hosted Hypervisor 1.4 VM Images 1.5 VM 1: Windows 10 aka &ldquo;The Victim&rdquo; 1.5.1 Installation 1.5.2 VMWare Tools 1.5.3 Deep disable MS Defender &#43; Updates 1.5.4 Sysmon 1.5.5 PowerShell ScriptBlock Logging 1.5.6 Install Software 1.5.7 Creating a Template 1.6 VM 2: Kali Linux aka &ldquo;The Attacker&rdquo; 1.7 VM 3: Ubuntu Linux 20.04 aka &ldquo;The Analyst&rdquo; 1.7.1 Installation 1." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://athul.github.io/archie/course01/outline/" /><meta property="article:section" content="course01" />
 
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Course 01 Outline"/>
-<meta name="twitter:description" content="Outline for course 01"/>
+<meta name="twitter:title" content="Outline: Threat Hunting for Beginners: Hunting Standard Dll-Injected C2 Implants"/>
+<meta name="twitter:description" content="# Topic 1 Setting Up Your Virtual Environment 1.1 Introduction 1.2 Requirements 1.3 Hosted Hypervisor 1.4 VM Images 1.5 VM 1: Windows 10 aka &ldquo;The Victim&rdquo; 1.5.1 Installation 1.5.2 VMWare Tools 1.5.3 Deep disable MS Defender &#43; Updates 1.5.4 Sysmon 1.5.5 PowerShell ScriptBlock Logging 1.5.6 Install Software 1.5.7 Creating a Template 1.6 VM 2: Kali Linux aka &ldquo;The Attacker&rdquo; 1.7 VM 3: Ubuntu Linux 20.04 aka &ldquo;The Analyst&rdquo; 1.7.1 Installation 1."/>
 <script src="https://athul.github.io/archie/js/feather.min.js"></script>
 	
 	
@@ -89,8 +89,11 @@
 <main>
 	<article>
 		<div class="title">
-			<h1 class="title">Course 01 Outline</h1>
-			<div class="meta">Posted on Jan 1, 0001</div>
+			<h1 class="title">Outline: Threat Hunting for Beginners: Hunting Standard Dll-Injected C2 Implants</h1>
+			<div class="meta">
+                
+                
+            </div>
 		</div>
 		
 
