--- a/public/course01/outline/index.html
+++ b/public/course01/outline/index.html
@@ -90,10 +90,7 @@
 	<article>
 		<div class="title">
 			<h1 class="title">Outline: Threat Hunting for Beginners: Hunting Standard Dll-Injected C2 Implants</h1>
-			<div class="meta">
-                
-                
-            </div>
+			<div class="meta">Posted on Jan 1, 0001</div>
 		</div>
 		
 
