--- a/public/course01/05_post_memory/index.html
+++ b/public/course01/05_post_memory/index.html
@@ -221,11 +221,11 @@ This key is commonly used to debug applications in Windows. However, it is also 
 <li>powershell.exe</li>
 <li>smartscreen.exe</li>
 </ul>
-<p>This is thus a good reminder that the mere appearance of a process in malfind&rsquo;s output is not an unequivocal affirmation of its malicious nature.</p>
+<p>This is thus a good reminder that the mere appearance of a process in <em>malfind</em>&rsquo;s output is not an unequivocal affirmation of its malicious nature.</p>
 <hr>
 <p> </p>
 <h1 id="54-final-thoughts">5.4. Final Thoughts</h1>
-<p>This section was admittedly not too revelatory, but really only because we already peformed live analysis. Again, if we were unable to perform live analysis and only received a memory dump, then this section showed us how we could derive a lot of the same information. Further, even if we did perform the live analysis, it might still be useful to validate the findings on a system not suspected of being compromised.</p>
+<p>This section was admittedly not too revelatory, but really only because we already performed live analysis. Again, if we were unable to perform live analysis and only received a memory dump, then this section showed us how we could derive a lot of the same information. Further, even if we did perform the live analysis, it might still be useful to validate the findings on a system not suspected of being compromised.</p>
 <p>I think this serves as a good introduction to <code>Volatility</code> - you now have some sense of how it works, how to use it, and what are the &ldquo;go to&rdquo; plug-ins for threat hunting.</p>
 <figure class="custom-figure"><img src="/img/office.gif"/>
 </figure>
