--- a/public/course01/08_review/index.html
+++ b/public/course01/08_review/index.html
@@ -107,6 +107,9 @@ x
 			<p><code>|</code> <a href="https://www.faanross.com/posts/course01/">Return to Course Overview</a> <code>|</code></p>
 <hr>
 <p> </p>
+<figure class="custom-figure"><img src="/img/gif/manhattan.png"/>
+</figure>
+
 <p>first thing create comparison image</p>
 <p>x</p>
 <p> </p>
