--- a/public/course01/03_live_native/index.html
+++ b/public/course01/03_live_native/index.html
@@ -119,7 +119,7 @@
 <hr>
 <p> </p>
 <h1 id="33-analysis">3.3. Analysis</h1>
-<p>There are a number of things we can look at when we do a live analyis using the native tools, including: connections, processes, shares, firewall settings, services, accounts, groups, registry keys, scheduled tasks etc.</p>
+<p>There are a number of things we can look at when we do a live analysis using the native tools, including: connections, processes, shares, firewall settings, services, accounts, groups, registry keys, scheduled tasks etc.</p>
 <p>For this course we will only focus on connections and processes. If you are keen to learn more about how to investigate the other factors I suggest you watch <a href="https://www.youtube.com/watch?v=fEip9gl2MTA">this excellent talk by John Strand</a>.</p>
 <figure class="custom-figure"><img src="/img/speech.gif"/>
 </figure>
