--- a/public/course01/04_live_hacker/index.html
+++ b/public/course01/04_live_hacker/index.html
@@ -124,7 +124,7 @@ So now let&rsquo;s bring out the big guns and learn all we can."/>
 <figure class="custom-figure"><img src="/img/redbutton.gif"/>
 </figure>
 
-<p>Additionally, the process as outlined here may give the impression that it typically plays out as a strictly linear process. This is not necessarilly the case - instead of going through our list 1-7 below, we could jump around not only on the list itself, but with completely different  techniqes.</p>
+<p>Additionally, the process as outlined here may give the impression that it typically plays out as a strictly linear process. This is not necessarily the case - instead of going through our list 1-7 below, we could jump around not only on the list itself, but with completely different  techniques.</p>
 <p>As a simple example - if we find a suspicious process by following this procedure, we might want to pause and have the SOC create a rule to scan the rest of the network looking for the same process. If we for example use <strong>Least Frequency Analysis</strong> and we see the process only occurs on one or two anomalous systems, well that then not only provides supporting evidence, but also gives us the confirmation that we are on the right path and should continue with our live memory analysis.</p>
 <figure class="custom-figure-6"><img src="/img/rabbit.gif"/>
 </figure>
